--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "design-tokens": "file:design-tokens",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.1",
     "react-router-dom": "^6.22.3",
     "styled-components": "^6.1.8",
     "use-query-params": "^2.2.1",
