--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@ladle/react": "^4.0.2",
     "@react-oauth/google": "^0.12.1",
+    "@vercel/speed-insights": "^1.0.10",
     "design-tokens": "file:design-tokens",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
