--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.6",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@googlemaps/typescript-guards": "^2.0.3",
     "@ladle/react": "^4.0.3",
