--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.8",
     "validator": "^13.11.0"
   },
