--- a/.github/workflows/main_gogood.yml
+++ b/.github/workflows/main_gogood.yml
@@ -27,14 +27,14 @@ jobs:
           npm run build --if-present
           npm run test --if-present
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      - name: Zip dist folder for deployment
+        run: zip -r dist.zip dist/
 
-      - name: Upload artifact for deployment job
+      - name: Upload dist folder as artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
-          name: node-app
-          path: release.zip
+          name: dist-app
+          path: dist.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -49,11 +49,11 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
-          name: node-app
+          name: dist-app
 
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-      
+      - name: Unzip dist folder for deployment
+        run: unzip dist.zip -d .
+
       - name: Login to Azure
         uses: azure/login@v1
         with:
@@ -68,4 +68,3 @@ jobs:
           app-name: 'gogood'
           slot-name: 'Production'
           package: .
-          
