--- a/.github/workflows/main_gogood.yml
+++ b/.github/workflows/main_gogood.yml
@@ -34,6 +34,7 @@ jobs:
         env:
           VITE_GOOGLE_CLIENT_ID: ${{ secrets.VITE_GOOGLE_CLIENT_ID }}
           VITE_GOOGLE_MAPS_API_KEY: ${{ secrets.VITE_GOOGLE_MAPS_API_KEY }}
+          VITE_BASE_URL: ${{ secrets.VITE_BASE_URL}}
 
       - name: Zip artifact for deployment
         run: zip -r release.zip dist
