--- a/package.json
+++ b/package.json
@@ -34,14 +34,17 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.3.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/validator": "^13.11.9",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
+    "eslint": "^9.3.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "globals": "^15.3.0",
     "typescript": "^5.4.3",
+    "typescript-eslint": "^7.11.0",
     "vite": "^5.2.0"
   }
 }
