--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@react-oauth/google": "^0.12.1",
     "@types/google.maps": "^3.55.6",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.3",
     "cors": "^2.8.5",
     "design-tokens": "file:design-tokens",
     "express": "^4.19.2",
     "fast-equals": "^5.0.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
@@ -36,6 +38,7 @@
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-router-dom": "^5.3.3",
     "@types/validator": "^13.11.9",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
