--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/google.maps": "^3.55.6",
     "axios": "^1.6.8",
     "chart.js": "^4.4.3",
+    "classnames": "^2.5.1",
     "cors": "^2.8.5",
     "design-tokens": "file:design-tokens",
     "express": "^4.19.2",
