--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@dicebear/collection": "^9.2.2",
+    "@dicebear/core": "^9.2.2",
     "@googlemaps/js-api-loader": "^1.16.6",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@googlemaps/typescript-guards": "^2.0.3",
